boltffi_backend/tests/jni/snapshots/jni__callback__jni_bridge_renders_callback_direct_vector_closure_parameters.snap
---
source: boltffi_backend/tests/jni/callback.rs
expression: "rendered_fixture(\"callback/callback_direct_vector_closure_parameter\")"
---
===== jni/demo.h =====
#pragma once

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef struct {
    int32_t code;
} FfiStatus;

#define FFI_STATUS_OK ((FfiStatus){0})
#define FFI_STATUS_NULL_POINTER ((FfiStatus){1})
#define FFI_STATUS_BUFFER_TOO_SMALL ((FfiStatus){2})
#define FFI_STATUS_INVALID_ARG ((FfiStatus){3})
#define FFI_STATUS_CANCELLED ((FfiStatus){4})
#define FFI_STATUS_INTERNAL_ERROR ((FfiStatus){100})

typedef struct {
    uint8_t *ptr;
    uintptr_t len;
    uintptr_t cap;
    uintptr_t align;
} FfiBuf_u8;

typedef struct {
    uint8_t *ptr;
    uintptr_t len;
    uintptr_t cap;
} FfiString;

typedef struct {
    FfiString message;
} FfiError;

typedef struct {
    const uint8_t *ptr;
    uintptr_t len;
} FfiSpan;

typedef const void *RustFutureHandle;
typedef int8_t StreamPollResult;
typedef int32_t WaitResult;
typedef void (*RustFutureContinuationCallback)(uint64_t callback_data, int8_t poll_result);
typedef void (*StreamContinuationCallback)(uint64_t callback_data, StreamPollResult result);

typedef struct {
    uint64_t handle;
    const void *vtable;
} BoltFFICallbackHandle;

void boltffi_free_string(FfiString string);
void boltffi_free_buf(FfiBuf_u8 buf);
FfiBuf_u8 boltffi_buf_from_bytes(const uint8_t *ptr, uintptr_t len);
FfiStatus boltffi_last_error_message(FfiString *out);
void boltffi_clear_last_error(void);
typedef struct {
    void (*free)(uint64_t);
    uint64_t (*clone)(uint64_t);
    void (*install)(uint64_t, uint32_t (*)(void *, const uint32_t *, uintptr_t), void *, void (*)(void *));
} ___ListenerVTable;
void boltffi_register_callback_demo_listener(const ___ListenerVTable *vtable);
BoltFFICallbackHandle boltffi_create_callback_demo_listener(uint64_t handle);

#ifdef __cplusplus
}
#endif
===== jni/jni_glue.c =====
#include <jni.h>
#include <stdint.h>
#include <stdbool.h>
#include <limits.h>
#include <stdlib.h>
#if defined(__ANDROID__)
#include <pthread.h>
#endif

#include "demo.h"
static JavaVM *boltffi_jni_vm = NULL;
static jclass boltffi_jni_native_class = NULL;

#define BOLTFFI_JNI_LOCAL_FRAME_CAPACITY 64
static jint boltffi_jni_attach_current_thread(JavaVM *vm, JNIEnv **env) {
#if defined(__ANDROID__)
    return (*vm)->AttachCurrentThread(vm, env, NULL);
#else
    return (*vm)->AttachCurrentThread(vm, (void **)env, NULL);
#endif
}
#if defined(__ANDROID__)
static pthread_key_t boltffi_jni_env_key;
static pthread_once_t boltffi_jni_env_key_once = PTHREAD_ONCE_INIT;
static int boltffi_jni_env_key_status = 0;
static char boltffi_jni_tls_attached_marker;

static void boltffi_jni_android_env_destructor(void *value) {
    if (value != NULL && boltffi_jni_vm != NULL) {
        (*boltffi_jni_vm)->DetachCurrentThread(boltffi_jni_vm);
    }
}

static void boltffi_jni_android_env_key_init(void) {
    boltffi_jni_env_key_status =
        pthread_key_create(&boltffi_jni_env_key, boltffi_jni_android_env_destructor);
}

static jint boltffi_jni_android_attach_cached(JavaVM *vm, JNIEnv **env, int *attached) {
    *attached = 0;

    if (pthread_once(&boltffi_jni_env_key_once, boltffi_jni_android_env_key_init) != 0 ||
        boltffi_jni_env_key_status != 0) {
        jint result = boltffi_jni_attach_current_thread(vm, env);
        if (result == JNI_OK) {
            *attached = 1;
        }
        return result;
    }

    jint result = (*vm)->AttachCurrentThreadAsDaemon(vm, env, NULL);
    if (result != JNI_OK) {
        return result;
    }

    if (pthread_setspecific(boltffi_jni_env_key, &boltffi_jni_tls_attached_marker) != 0) {
        (*vm)->DetachCurrentThread(vm);
        *env = NULL;
        return JNI_ERR;
    }

    return JNI_OK;
}
#endif

static bool boltffi_jni_clear_exception(JNIEnv *env) {
    if (!(*env)->ExceptionCheck(env)) {
        return false;
    }
    (*env)->ExceptionClear(env);
    return true;
}

static bool boltffi_jni_enter(JNIEnv **env, int *attached) {
    if (boltffi_jni_vm == NULL) {
        return false;
    }
    *env = NULL;
    *attached = 0;
    jint env_status = (*boltffi_jni_vm)->GetEnv(boltffi_jni_vm, (void **)env, JNI_VERSION_1_6);
    if (env_status == JNI_EDETACHED) {
#if defined(__ANDROID__)
        if (boltffi_jni_android_attach_cached(boltffi_jni_vm, env, attached) != JNI_OK) {
            return false;
        }
#else
        if (boltffi_jni_attach_current_thread(boltffi_jni_vm, env) != JNI_OK) {
            return false;
        }
        *attached = 1;
#endif
    } else if (env_status != JNI_OK) {
        return false;
    }

#if defined(__ANDROID__)
    JNIEnv *callback_env = *env;
    if ((*callback_env)->PushLocalFrame(callback_env, BOLTFFI_JNI_LOCAL_FRAME_CAPACITY) != JNI_OK) {
        boltffi_jni_clear_exception(callback_env);
        if (*attached) {
            (*boltffi_jni_vm)->DetachCurrentThread(boltffi_jni_vm);
            *attached = 0;
        }
        return false;
    }
#endif

    return true;
}

static void boltffi_jni_exit(JNIEnv *env, int attached) {
#if defined(__ANDROID__)
    if (env != NULL) {
        (*env)->PopLocalFrame(env, NULL);
        boltffi_jni_clear_exception(env);
    }
#else
    (void)env;
#endif
    if (attached) {
        (*boltffi_jni_vm)->DetachCurrentThread(boltffi_jni_vm);
    }
}

static void boltffi_jni_throw_runtime(JNIEnv *env, const char *message) {
    jclass exception_class = (*env)->FindClass(env, "java/lang/RuntimeException");
    if (exception_class == NULL) {
        return;
    }
    (*env)->ThrowNew(env, exception_class, message);
    (*env)->DeleteLocalRef(env, exception_class);
}

static void boltffi_jni_throw_illegal_argument(JNIEnv *env, const char *message) {
    jclass exception_class = (*env)->FindClass(env, "java/lang/IllegalArgumentException");
    if (exception_class == NULL) {
        return;
    }
    (*env)->ThrowNew(env, exception_class, message);
    (*env)->DeleteLocalRef(env, exception_class);
}

static uint32_t boltffi_jni____closure__vec_u32_to_u32_call(void *user_data, const uint32_t *arg0_ptr, uintptr_t arg0_len);
static void boltffi_jni____closure__vec_u32_to_u32_release(void *user_data);

typedef struct {
    uint32_t (*call)(void *, const uint32_t *, uintptr_t);
    void *context;
    void (*release)(void *);
} BoltFFIJniClosure___closure__vec_u32_to_u32;
static BoltFFIJniClosure___closure__vec_u32_to_u32 *boltffi_jni____closure__vec_u32_to_u32_handle_ref(jlong value) {
    return value == 0 ? NULL : (BoltFFIJniClosure___closure__vec_u32_to_u32 *)(uintptr_t)value;
}

static void boltffi_jni____closure__vec_u32_to_u32_handle_release(jlong value) {
    BoltFFIJniClosure___closure__vec_u32_to_u32 *closure = boltffi_jni____closure__vec_u32_to_u32_handle_ref(value);
    if (closure == NULL) {
        return;
    }
    if (closure->release != NULL) {
        closure->release(closure->context);
    }
    free(closure);
}

static jlong boltffi_jni____closure__vec_u32_to_u32_handle_new(JNIEnv *env, uint32_t (*call)(void *, const uint32_t *, uintptr_t), void *context, void (*release)(void *)) {
    BoltFFIJniClosure___closure__vec_u32_to_u32 *closure = (BoltFFIJniClosure___closure__vec_u32_to_u32 *)malloc(sizeof(BoltFFIJniClosure___closure__vec_u32_to_u32));
    if (closure == NULL) {
        if (release != NULL) {
            release(context);
        }
        boltffi_jni_throw_runtime(env, "failed to allocate BoltFFI closure handle");
        return 0;
    }
    closure->call = call;
    closure->context = context;
    closure->release = release;
    return (jlong)(uintptr_t)closure;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1closure_1_1_1_1closure_1_1vec_1u32_1to_1u32_1release(JNIEnv *env, jclass cls, jlong value) {
    (void)env;
    (void)cls;
    boltffi_jni____closure__vec_u32_to_u32_handle_release(value);
}

JNIEXPORT jint JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1closure_1_1_1_1closure_1_1vec_1u32_1to_1u32_1call(JNIEnv *env, jclass cls, jlong value, jintArray arg0) {
    (void)env;
    (void)cls;
    BoltFFIJniClosure___closure__vec_u32_to_u32 *closure = boltffi_jni____closure__vec_u32_to_u32_handle_ref(value);
    if (closure == NULL || closure->call == NULL) {
        return 0;
    }

    jint *arg0_ptr = NULL;
    jsize arg0_len = 0;
    jint __boltffi_arg0_stack[8];
    bool __boltffi_arg0_needs_release = false;

    if (arg0 == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI array argument was null");

    if (arg0_ptr != NULL) {
        if (__boltffi_arg0_needs_release) {
            (*env)->ReleaseIntArrayElements(env, arg0, arg0_ptr, JNI_ABORT);
        }
    }

        return 0;
    }
    arg0_len = (*env)->GetArrayLength(env, arg0);
    if (arg0_len <= (jsize)8) {
        (*env)->GetIntArrayRegion(env, arg0, 0, arg0_len, __boltffi_arg0_stack);
        if ((*env)->ExceptionCheck(env)) {

    if (arg0_ptr != NULL) {
        if (__boltffi_arg0_needs_release) {
            (*env)->ReleaseIntArrayElements(env, arg0, arg0_ptr, JNI_ABORT);
        }
    }

        return 0;
        }
        arg0_ptr = __boltffi_arg0_stack;
    } else {
        arg0_ptr = (*env)->GetIntArrayElements(env, arg0, NULL);
        if (arg0_ptr == NULL) {

    if (arg0_ptr != NULL) {
        if (__boltffi_arg0_needs_release) {
            (*env)->ReleaseIntArrayElements(env, arg0, arg0_ptr, JNI_ABORT);
        }
    }

        return 0;
        }
        __boltffi_arg0_needs_release = true;
    }
    uint32_t result = closure->call(closure->context, (const uint32_t *)arg0_ptr, (uintptr_t)arg0_len);

    if (arg0_ptr != NULL) {
        if (__boltffi_arg0_needs_release) {
            (*env)->ReleaseIntArrayElements(env, arg0, arg0_ptr, JNI_ABORT);
        }
    }
    return (jint)result;
}

static jclass g____closure__vec_u32_to_u32_class = NULL;
static jmethodID g____closure__vec_u32_to_u32_call_method = NULL;
static jmethodID g____closure__vec_u32_to_u32_free_method = NULL;
static uint32_t boltffi_jni____closure__vec_u32_to_u32_call(void *user_data, const uint32_t *arg0_ptr, uintptr_t arg0_len) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong handle = (jlong)(uintptr_t)user_data;

    jintArray arg0 = NULL;

    if (arg0_len > (uintptr_t)INT32_MAX) {
        boltffi_jni_throw_runtime(env, "BoltFFI vector argument too large for Java array");

    if (arg0 != NULL) {
        (*env)->DeleteLocalRef(env, arg0);
    }
        boltffi_jni_clear_exception(env);
        boltffi_jni_exit(env, attached);

        return 0;
    }
    arg0 = (*env)->NewIntArray(env, (jsize)arg0_len);
    if (arg0 == NULL) {

    if (arg0 != NULL) {
        (*env)->DeleteLocalRef(env, arg0);
    }
        boltffi_jni_clear_exception(env);
        boltffi_jni_exit(env, attached);

        return 0;
    }
    (*env)->SetIntArrayRegion(env, arg0, 0, (jsize)arg0_len, (const jint *)arg0_ptr);
    if ((*env)->ExceptionCheck(env)) {

    if (arg0 != NULL) {
        (*env)->DeleteLocalRef(env, arg0);
    }
        boltffi_jni_clear_exception(env);
        boltffi_jni_exit(env, attached);

        return 0;
    }

    uint32_t result = (uint32_t)(*env)->CallStaticIntMethod(env, g____closure__vec_u32_to_u32_class, g____closure__vec_u32_to_u32_call_method, handle, arg0);
    if (boltffi_jni_clear_exception(env)) {

    if (arg0 != NULL) {
        (*env)->DeleteLocalRef(env, arg0);
    }
        boltffi_jni_exit(env, attached);
        return 0;
    }

    if (arg0 != NULL) {
        (*env)->DeleteLocalRef(env, arg0);
    }
    boltffi_jni_exit(env, attached);
    return result;
}

static void boltffi_jni____closure__vec_u32_to_u32_release(void *user_data) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____closure__vec_u32_to_u32_class, g____closure__vec_u32_to_u32_free_method, (jlong)(uintptr_t)user_data);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static bool boltffi_jni_load____closure__vec_u32_to_u32(JNIEnv *env) {
    jclass local_class = (*env)->FindClass(env, "com/boltffi/demo/ClosureVecU32ToU32Callbacks");
    if (local_class == NULL) {
        return false;
    }
    g____closure__vec_u32_to_u32_class = (*env)->NewGlobalRef(env, local_class);
    (*env)->DeleteLocalRef(env, local_class);
    if (g____closure__vec_u32_to_u32_class == NULL) {
        return false;
    }
    g____closure__vec_u32_to_u32_call_method = (*env)->GetStaticMethodID(env, g____closure__vec_u32_to_u32_class, "call", "(J[I)I");
    if (g____closure__vec_u32_to_u32_call_method == NULL) {
        goto fail;
    }
    g____closure__vec_u32_to_u32_free_method = (*env)->GetStaticMethodID(env, g____closure__vec_u32_to_u32_class, "free", "(J)V");
    if (g____closure__vec_u32_to_u32_free_method == NULL) {
        goto fail;
    }
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____closure__vec_u32_to_u32_class);
    g____closure__vec_u32_to_u32_class = NULL;
    return false;
}

static void boltffi_jni_unload____closure__vec_u32_to_u32(JNIEnv *env) {
    if (g____closure__vec_u32_to_u32_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____closure__vec_u32_to_u32_class);
    }
    g____closure__vec_u32_to_u32_class = NULL;
    g____closure__vec_u32_to_u32_call_method = NULL;
    g____closure__vec_u32_to_u32_free_method = NULL;
}

static jclass g____ListenerVTable_class = NULL;
static jmethodID g____ListenerVTable_free_method = NULL;
static jmethodID g____ListenerVTable_clone_method = NULL;
static jmethodID g____ListenerVTable_install_method = NULL;

static void ___ListenerVTable_free(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_free_method, (jlong)handle);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static uint64_t ___ListenerVTable_clone(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong result = (*env)->CallStaticLongMethod(env, g____ListenerVTable_class, g____ListenerVTable_clone_method, (jlong)handle);
    if (boltffi_jni_clear_exception(env)) {
        boltffi_jni_exit(env, attached);
        return 0;
    }
    boltffi_jni_exit(env, attached);
    return (uint64_t)result;
}

static void ___ListenerVTable_install(uint64_t handle, uint32_t (*callback_call)(void *, const uint32_t *, uintptr_t), void *callback_context, void (*callback_release)(void *)) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {

        return;
    }

    jlong __boltffi_callback_handle = 0;

    __boltffi_callback_handle = boltffi_jni____closure__vec_u32_to_u32_handle_new(env, callback_call, (void *)callback_context, callback_release);
    if ((*env)->ExceptionCheck(env)) {

        boltffi_jni____closure__vec_u32_to_u32_handle_release(__boltffi_callback_handle);
        boltffi_jni_clear_exception(env);
        boltffi_jni_exit(env, attached);

        return;
    }

    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_install_method, (jlong)handle, __boltffi_callback_handle);

        boltffi_jni____closure__vec_u32_to_u32_handle_release(__boltffi_callback_handle);
    if (boltffi_jni_clear_exception(env)) {
    }
    boltffi_jni_exit(env, attached);
}

static ___ListenerVTable g____ListenerVTable_vtable = {
    .free = ___ListenerVTable_free,
    .clone = ___ListenerVTable_clone,
    .install = ___ListenerVTable_install,
};

static bool boltffi_jni_load____ListenerVTable_callbacks(JNIEnv *env) {
    jclass local_class = (*env)->FindClass(env, "com/boltffi/demo/ListenerCallbacks");
    if (local_class == NULL) {
        return false;
    }
    g____ListenerVTable_class = (*env)->NewGlobalRef(env, local_class);
    (*env)->DeleteLocalRef(env, local_class);
    if (g____ListenerVTable_class == NULL) {
        return false;
    }
    g____ListenerVTable_free_method = (*env)->GetStaticMethodID(env, g____ListenerVTable_class, "free", "(J)V");
    if (g____ListenerVTable_free_method == NULL) {
        goto fail;
    }
    g____ListenerVTable_clone_method = (*env)->GetStaticMethodID(env, g____ListenerVTable_class, "clone", "(J)J");
    if (g____ListenerVTable_clone_method == NULL) {
        goto fail;
    }
    g____ListenerVTable_install_method = (*env)->GetStaticMethodID(env, g____ListenerVTable_class, "install", "(JJ)V");
    if (g____ListenerVTable_install_method == NULL) {
        goto fail;
    }
    boltffi_register_callback_demo_listener(&g____ListenerVTable_vtable);
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____ListenerVTable_class);
    g____ListenerVTable_class = NULL;
    return false;
}

static void boltffi_jni_unload____ListenerVTable_callbacks(JNIEnv *env) {
    if (g____ListenerVTable_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____ListenerVTable_class);
    }
    g____ListenerVTable_class = NULL;
    g____ListenerVTable_free_method = NULL;
    g____ListenerVTable_clone_method = NULL;
    g____ListenerVTable_install_method = NULL;
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) != JNI_OK) {
        return JNI_ERR;
    }
    jclass local_class = (*env)->FindClass(env, "com/boltffi/demo/Native");
    if (local_class == NULL) {
        return JNI_ERR;
    }
    boltffi_jni_native_class = (*env)->NewGlobalRef(env, local_class);
    (*env)->DeleteLocalRef(env, local_class);
    if (boltffi_jni_native_class == NULL) {
        return JNI_ERR;
    }
    if (!boltffi_jni_load____ListenerVTable_callbacks(env)) {
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        boltffi_jni_unload____closure__vec_u32_to_u32(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    if (!boltffi_jni_load____closure__vec_u32_to_u32(env)) {
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        boltffi_jni_unload____closure__vec_u32_to_u32(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        boltffi_jni_unload____closure__vec_u32_to_u32(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}
